# Adversarial-Robustness-Measuring-Budgeting-and-Controlling-the-Shadow-Price

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  benchmark.py  controller.py  demo_control_diagnostics.py  demo_instrument_panel.py  demo_mlp_training.py  diagnostics.py  margin_density.py  price_meter.py  proxy.py  pyproject.toml
examples/: demo_end_to_end.py  tiny_mlp.py  torch_resnet_pricing.py
shadowprice/: breach.py  effective_support.py  kappa_infty.py  radius.py
shadowprice/adapters/: __init__.py  torch.py
tests/: test_batch2.py  test_core.py
